ubiquity (1.3.14) UNRELEASED; urgency=low

  * Use partman-efi on i386.
  * Ship an apport hook instead of calling apport directly from the GTK
    frontend.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 21 Jan 2007 16:01:12 +0000

ubiquity (1.3.13) feisty; urgency=low

  * Automatic update of included source packages: base-installer
    1.70ubuntu2, console-setup 1.13ubuntu5, grub-installer 1.20ubuntu2,
    partman-base 100ubuntu3, partman-efi 11ubuntu1, silo-installer
    1.07ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 19 Jan 2007 11:56:06 +0000

ubiquity (1.3.12) feisty; urgency=low

  [ Colin Watson ]
  * KDE frontend: Fix crash going back from advanced partitioner (mentioned
    in Malone #78881).
  * Fix crash caused by incorrectly traversing into partman-auto's "Guided -
    use the largest continuous free space" option if present (LP: #76976).

  [ Brian Murray ]
  * Fix incorrect release date in intro message (LP: #78941).

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 14 Jan 2007 02:08:57 +0000

ubiquity (1.3.11) feisty; urgency=low

  * New partitioner: Fix crash while setting up partition edit dialog.
  * New partitioner: Indent partition names two spaces to the right of disk
    names.
  * GTK frontend: Drop privileges while invoking gconftool-2, and point it
    at the correct user's gconf directory; this fixes incorrect automounting
    during partitioning.
  * Fix language pack installation to clean up any broken packages in the
    dependency cache more comprehensively (LP: #61912 and probably a slew of
    duplicates).
  * GTK frontend: Fix various obscure crashes with non-ASCII
    autopartitioning choices (LP: #78778).
  * Automatic update of included source packages: partman-base 100ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 11 Jan 2007 14:50:50 +0000

ubiquity (1.3.10) feisty; urgency=low

  * GTK frontend: Fix another crash while setting up the resize progress bar
    (LP: #77978).
