@@ -3,6 +3,8 @@ ubiquity (1.3.14) UNRELEASED; urgency=low
   * Use partman-efi on i386.
   * Ship an apport hook instead of calling apport directly from the GTK
     frontend.
+  * New partitioner: Skip telling partman to edit method or mountpoint if
+    either is left unchanged in the edit dialog.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sun, 21 Jan 2007 16:01:12 +0000
 
